--- a/Admin/css/style.css
+++ b/Admin/css/style.css
@@ -48,6 +48,42 @@ body {
     background-color: rgba(0,0,0,0.5);
 }
 
+.background-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-image: url(/img/Background.png);
+    background-size: cover;
+    background-position: center;
+    z-index: -10;
+}
+
+.error-template {
+    margin-top: 5%;
+    padding: 40px 15px;
+    text-align: center;
+}
+
+.error-actions {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.btn {
+    margin-right: 10px;
+}
+
+.image-container {
+    text-align: center;
+}
+
+.image-container img {
+    width: 30%;
+    height: auto;
+}
+
 @-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
     100% { -webkit-transform: rotate(360deg); }
